documents/examples/bad/auto2.latf
auto f(int x) {
    return lambda (int y) -> int {
        return x + y;
    };
}

auto f2(int ref x) {
    if (x > 0) {
        println("x is positive");
    }
    return lambda (int y) -> int {
        return x - y;
    };
}

int main() {
    auto g = f(-5);

    int x;
    g = g2(x); // error - incompatible types (ref)
    g = lambda (int ref z) -> int . z + 1; // error - incompatible types
    g = lambda (int z) -> bool . z > 0; // error - incompatible types
    g = lambda (int z, int y) -> int . z + y; // error - incompatible types
    g = lambda () -> int . 1; // error - incompatible types

    return 0;
}